--- a/pcso-lotto-and-games/Paul123.html
+++ b/pcso-lotto-and-games/Paul123.html
@@ -34,7 +34,7 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;text-align:center;overflow: a
 .box .title{font-size:26px;line-height:1.25;padding-left:14px;padding-top:18px;-webkit-text-stroke:0}.box p{font-size:16.5px;padding-top:0;}.box img{width:28%;height:;float:right;margin:4px 18px 13px 16px;border-radius:3px}.box{border-radius:8px;overflow:hidden;background:#fff;padding-bottom:7px;box-shadow:0 0 1.5px rgba(0,0,0,0.12),0 1.5px 1.5px rgba(0,0,0,0.12),0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.12);margin-bottom:10px;transition: 0.4s;}.box:hover{box-shadow:0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.24),0 0 6px rgba(0,0,0,0.12),0 6px 6px rgba(0,0,0,0.24)}
 .menu a{color:#385b83;padding:10px 0 16px 20px;font-size:23px;display:block}
 .navi .menu{z-index:8;position: absolute;right:0;top:0;height:100%;transition:all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)}.navi input#toggle + label{position:absolute;cursor:pointer;z-index:7}input#toggle:checked ~ .menu{right:-700px}input{display:none}
-.AdBox{display:inline-block;width:100%;max-width:300px;margin-right:16px}
+.AdBox{display:inline-block;width:100%;max-width:250px;margin-right:16px}
 
 </style></head><body style="background:rgba(248,250,255,.3)">
 
@@ -59,7 +59,7 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;text-align:center;overflow: a
 	<a href="#">Vacancies</a>
 	<a href="#">Contact</a></div></section></nav>
 
-<div class="text" style="max-width:1115px;margin:auto">
+<div class="text" style="max-width:1065px;margin:auto">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 720x90 -->
 <ins class="adsbygoogle"
@@ -70,21 +70,19 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;text-align:center;overflow: a
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>	
 	<div class="hide-s AdBox" style="float:right;margin-bottom:30px;height:2515px"><div style="height:1257px"><div style="margin-bottom:40px;position:sticky;top:18px"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Top Ad -->
+<!-- 250x250 -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:250px;height:250px"
      data-ad-client="ca-pub-8489405167836126"
-     data-ad-slot="1163424893"
-     data-ad-format="auto"></ins>
+     data-ad-slot="2201696164"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div></div><div style="height:1257px"><div style="position:sticky;top:18px"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Top Ad -->
+<!-- 250x250 -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:250px;height:250px"
      data-ad-client="ca-pub-8489405167836126"
-     data-ad-slot="1163424893"
-     data-ad-format="auto"></ins>
+     data-ad-slot="2201696164"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div></div></div>
