--- a/pcso-lotto-and-games/lifeWire2.html
+++ b/pcso-lotto-and-games/lifeWire2.html
@@ -13,48 +13,7 @@
 <meta property="article:tag" content="what does the liver do" />
 <meta name="sailthru.tags" content="lifewire,social" />
 
-<style>
-*{box-sizing:border-box;margin:0}html,body,.psize,a,.accordion,.title{font-family:Arial;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html,body{position:relative!important}.Author{width:100%;padding:11px 0 22px 17px;float:left}.Author img{height:45px;width:45px;display:inline-block;float:left;border-radius:50%}.AuthorName{color:#6c7e92;font-size:15px;display:inline-block;-webkit-margin-before:4px;-webkit-margin-after:0;letter-spacing:.5px;float:left;line-height:1.3;padding:0 16px 0 12px}.Date{font-size:13px}.category{margin-left:16px;padding:5.5px 0;font-size:12px;color:#0073e6;font-weight:500;letter-spacing:.9px;font-family:Arial}
-h2,h3,h4,.title{letter-spacing:-.3px;font-size:24px;line-height:1.4;-webkit-margin-before:18px;-webkit-margin-after:5px}
-h1,h2,h3,h4,.title{color:#385b83;font-weight:300;padding:0 14px;}h1{letter-spacing:-.5px;font-size:33px;}
-p,.accordion,.psize,li{font-family:Arial;font-size:17.5px;line-height:1.6;padding:8.5px 14px;color:#424b57;letter-spacing:.2px}.TextArea a{text-decoration:none;color:#f22f46;-webkit-text-stroke:.1px #f22f46;font-size:17px;line-height:0;letter-spacing:.2px}a{text-decoration:none}footer p:hover,footer a:hover{color:#0e1e25;} footer p, footer a{color:rgba(255,255,255,.30);font-size:13px;padding:0 32px;font-weight:400;display:block;text-align:center;font-family:Arial;letter-spacing:.5px}
-@media (max-width:600px){.SMShare{position:fixed;bottom:0;height:44px;box-shadow:0 3px 5px 0 rgba(0,0,0,0.26)}p,li{-webkit-text-stroke:.2px #424b57}h1{line-height:1.2;margin-top:-5px;padding:15px 15px 3px 15px}.hide-s{display:none!important}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar{padding:3px 0 6px 0;z-index:4;top:0;-webkit-box-shadow:0 10px 40px 0 rgba(62,57,107,.07),0 2px 9px 0 rgba(62,57,107,.06);box-shadow:0 10px 40px 0 rgba(62,57,107,.07),0 2px 9px 0 rgba(62,57,107,.06)}#navbar img {margin-left:5%}
-@media (max-width:900px)and(min-width:601px){.HTitleBox{padding-left:16px}h1{padding:}}
-@media (min-width:601px){.hide-ML{display:none!important}.TitleBox{margin-top:-228px;position:absolute;margin-left:25%;width:75%}.TBText{background:rgba(248,250,255,.9);border-radius:8px;padding:30px 20px 10px 15px}h1{padding:20px 20px 0 15px;font-size:30px}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
-@media (min-width:901px){}.row:after, row:before {content:""; display:table; clear:both;}
-strong{font-weight:300}.box img{opacity:.85;float:right;display:inline-block;width:30px;padding:15px 0 1px 0;margin-right:10px}
-.text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
-blockquote{padding:20px 35px;font-size:19px;font-weight:100;text-align:right;color:#69656e;line-height:1.6;background:rgba(248,250,255);border-bottom:1px solid #e6e6e6;}
-
-div.scrollmenu {padding:0 10px;letter-spacing:-6px;background-color:#f9f9f9;overflow: auto; width:100%;white-space:nowrap}div.scrollmenu a {border-right:1px solid rgba(62,57,107,.07);display: inline-block;font-family:Arial;color:#404040;letter-spacing:.5px;text-align: center;text-transform:uppercase;padding:8px 12px;font-weight:500;text-decoration: none;font-size:15px}div.scrollmenu a:hover{color:#3e396b}
-
-.bar1, .bar2, .bar3 {
-    width: 33px;
-    height: 4px;
-    background:#424b57;
-    margin: 4px 0;border-radius:20px
-}
-
-
-.TitleDiv{border-top:1px solid #EEE;width:70px;margin:0 0 14px 14px}
-.accordion{border:none;background-color:inherit;cursor:pointer;padding:18px 12px;width:100%;text-align:left;outline:none;transition:0.4s;font-size:17px} .panel{padding:0 5px;background-color:inherit;max-height:0;overflow:hidden;transition:max-height 0.2s ease-out;border-bottom:1px solid #e6edff} .accordion:after{content: '\002B';color:#424f8a;font-weight: bold;float: right;margin-left: 5px;} .active:after{content: "\2212";}
-.box .title{font-size:22px;padding-top:0;font-family:Times;-webkit-text-stroke:0}.box p{font-size:16px;padding-top:0;}.box img{width:28%;height:;float:right;margin:4px 18px 5px 16px;border-radius:2px}.box{border-radius:8px;overflow:hidden;background:#fff;padding-bottom:7px;box-shadow:0 0 1.5px rgba(0,0,0,0.12),0 1.5px 1.5px rgba(0,0,0,0.12),0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.12);margin-bottom:10px;transition: 0.4s;}.box:hover{box-shadow:0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.24),0 0 6px rgba(0,0,0,0.12),0 6px 6px rgba(0,0,0,0.24)}
-iframe{width:100%!important;height:204px}
-
-.menu a {
-			color:#385b83;
-			padding:10px 0 16px 20px;font-size:23px;
-			font-family:Arial;
-			display:block
-		}
-		
-		.navi .menu {
-		
-			
-			background:#fff;
-			padding:60px 0 0 5%;z-index:8;
-			position: absolute;right:0;top:0;height:100%;transition:all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)}.navi input#toggle + label{position:absolute;cursor:pointer;z-index:7}input#toggle:checked ~ .menu{right:-700px}input{display:none}
-</style></head><body style="background:rgba(248,250,255,.3)">
+</head><body style="background:rgba(248,250,255,.3)">
 
 <div id="navbar" style="background:#fff;width:100%;position:sticky;display:block">
 
@@ -174,6 +133,49 @@ Example: If you mark "6 Draws" on your playslip, you will pay ₱120, that is fo
 	<a href="" ><div class="box"><img src="../../images/Abcd.jpg" alt="How to Franchise McDonald's"><p class="title">How to Franchise Shakeys?</p><p>Create beautiful apps with modular and costumizable UI components.</p></div></a>
 	<a href="" ><div class="box"><img src="../../images/Abcd.jpg" alt="How to Franchise McDonald's"><p class="title">How to Franchise McDonald's?</p><p>Create beautiful apps with modular and costumizable UI components.</p></div></a>
 	<br></div></div>
+
+<style>
+*{box-sizing:border-box;margin:0}html,body,.psize,a,.accordion,.title{font-family:Arial;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html,body{position:relative!important}.Author{width:100%;padding:11px 0 22px 17px;float:left}.Author img{height:45px;width:45px;display:inline-block;float:left;border-radius:50%}.AuthorName{color:#6c7e92;font-size:15px;display:inline-block;-webkit-margin-before:4px;-webkit-margin-after:0;letter-spacing:.5px;float:left;line-height:1.3;padding:0 16px 0 12px}.Date{font-size:13px}.category{margin-left:16px;padding:5.5px 0;font-size:12px;color:#0073e6;font-weight:500;letter-spacing:.9px;font-family:Arial}
+h2,h3,h4,.title{letter-spacing:-.3px;font-size:24px;line-height:1.4;-webkit-margin-before:18px;-webkit-margin-after:5px}
+h1,h2,h3,h4,.title{color:#385b83;font-weight:300;padding:0 14px;}h1{letter-spacing:-.5px;font-size:33px;}
+p,.accordion,.psize,li{font-family:Arial;font-size:17.5px;line-height:1.6;padding:8.5px 14px;color:#424b57;letter-spacing:.2px}.TextArea a{text-decoration:none;color:#f22f46;-webkit-text-stroke:.1px #f22f46;font-size:17px;line-height:0;letter-spacing:.2px}a{text-decoration:none}footer p:hover,footer a:hover{color:#0e1e25;} footer p, footer a{color:rgba(255,255,255,.30);font-size:13px;padding:0 32px;font-weight:400;display:block;text-align:center;font-family:Arial;letter-spacing:.5px}
+@media (max-width:600px){.SMShare{position:fixed;bottom:0;height:44px;box-shadow:0 3px 5px 0 rgba(0,0,0,0.26)}p,li{-webkit-text-stroke:.2px #424b57}h1{line-height:1.2;margin-top:-5px;padding:15px 15px 3px 15px}.hide-s{display:none!important}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar{padding:3px 0 6px 0;z-index:4;top:0;-webkit-box-shadow:0 10px 40px 0 rgba(62,57,107,.07),0 2px 9px 0 rgba(62,57,107,.06);box-shadow:0 10px 40px 0 rgba(62,57,107,.07),0 2px 9px 0 rgba(62,57,107,.06)}#navbar img {margin-left:5%}
+@media (max-width:900px)and(min-width:601px){.HTitleBox{padding-left:16px}h1{padding:}}
+@media (min-width:601px){.hide-ML{display:none!important}.TitleBox{margin-top:-228px;position:absolute;margin-left:25%;width:75%}.TBText{background:rgba(248,250,255,.9);border-radius:8px;padding:30px 20px 10px 15px}h1{padding:20px 20px 0 15px;font-size:30px}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
+@media (min-width:901px){}.row:after, row:before {content:""; display:table; clear:both;}
+strong{font-weight:300}.box img{opacity:.85;float:right;display:inline-block;width:30px;padding:15px 0 1px 0;margin-right:10px}
+.text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
+blockquote{padding:20px 35px;font-size:19px;font-weight:100;text-align:right;color:#69656e;line-height:1.6;background:rgba(248,250,255);border-bottom:1px solid #e6e6e6;}
+
+div.scrollmenu {padding:0 10px;letter-spacing:-6px;background-color:#f9f9f9;overflow: auto; width:100%;white-space:nowrap}div.scrollmenu a {border-right:1px solid rgba(62,57,107,.07);display: inline-block;font-family:Arial;color:#404040;letter-spacing:.5px;text-align: center;text-transform:uppercase;padding:8px 12px;font-weight:500;text-decoration: none;font-size:15px}div.scrollmenu a:hover{color:#3e396b}
+
+.bar1, .bar2, .bar3 {
+    width: 33px;
+    height: 4px;
+    background:#424b57;
+    margin: 4px 0;border-radius:20px
+}
+
+
+.TitleDiv{border-top:1px solid #EEE;width:70px;margin:0 0 14px 14px}
+.accordion{border:none;background-color:inherit;cursor:pointer;padding:18px 12px;width:100%;text-align:left;outline:none;transition:0.4s;font-size:17px} .panel{padding:0 5px;background-color:inherit;max-height:0;overflow:hidden;transition:max-height 0.2s ease-out;border-bottom:1px solid #e6edff} .accordion:after{content: '\002B';color:#424f8a;font-weight: bold;float: right;margin-left: 5px;} .active:after{content: "\2212";}
+.box .title{font-size:22px;padding-top:0;font-family:Times;-webkit-text-stroke:0}.box p{font-size:16px;padding-top:0;}.box img{width:28%;height:;float:right;margin:4px 18px 5px 16px;border-radius:2px}.box{border-radius:8px;overflow:hidden;background:#fff;padding-bottom:7px;box-shadow:0 0 1.5px rgba(0,0,0,0.12),0 1.5px 1.5px rgba(0,0,0,0.12),0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.12);margin-bottom:10px;transition: 0.4s;}.box:hover{box-shadow:0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.24),0 0 6px rgba(0,0,0,0.12),0 6px 6px rgba(0,0,0,0.24)}
+iframe{width:100%!important;height:204px}
+
+.menu a {
+			color:#385b83;
+			padding:10px 0 16px 20px;font-size:23px;
+			font-family:Arial;
+			display:block
+		}
+		
+		.navi .menu {
+		
+			
+			background:#fff;
+			padding:60px 0 0 5%;z-index:8;
+			position: absolute;right:0;top:0;height:100%;transition:all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)}.navi input#toggle + label{position:absolute;cursor:pointer;z-index:7}input#toggle:checked ~ .menu{right:-700px}input{display:none}
+</style>
 
 <footer style="padding:50px 0;background:#0d112b">
 <a href="" >About TheBlog.ph</a>
