--- a/pcso-lotto-and-games/fastest.html
+++ b/pcso-lotto-and-games/fastest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="theme-color" content="#2d89ef">
+<meta name="theme-color" content="#00bbd7">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title></title>
 <style type="text/css">
