--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en_US" xmlns:fb="http://ogp.me/ns/fb#" prefix="og: http://ogp.me/ns/article#">
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110449030-1"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-110449030-1');</script>	
 <meta charset="utf-8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <title>How To Play PCSO Swertres | How does Rambolito works - Lotto Info Philippines</title>
