--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -335,8 +335,8 @@ function closeNav() {
 	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
 	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
 	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
-	</div>
-	  
+	</div><br>
+	  <div class="hide-s" style="overflow:hidden; text-align:center"><a href="https://www.ipage.com/join/index.bml?bannerID=478&AffID=883679"><img src="https://www1.ipage.com/affiliate/banners/478" style="border:0px" alt="affiliate_link"/></a></div><br>	  
   </div>
 </div>
 
