--- a/pcso-lotto-and-games/lotto-6-42.html
+++ b/pcso-lotto-and-games/lotto-6-42.html
@@ -251,8 +251,9 @@ function closeNav() {
   </div>
     
   <div class="side">
-    <img src="../images/6-42-how.png" alt="How to play PCSO Lotto 6/42" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-  </div>
+    <img src="../images/6-42-how.png" alt="How to play PCSO Lotto 6/42" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)"><br>
+<div class="hide-s" style="overflow:hidden; text-align:center"><a href="https://www.ipage.com/join/index.bml?bannerID=478&AffID=883679"><img src="https://www1.ipage.com/affiliate/banners/478" style="border:0px" alt="affiliate_link"/></a></div><br>
+	</div>
 </div>
 
 <script type=application/ld+json>{
