--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -236,6 +236,7 @@ function closeNav() {
 	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/ez-2" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
 	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
 	</div><br>
+	  <div class="hide-s" style="overflow:hidden; text-align:center"><a href="https://www.ipage.com/join/index.bml?bannerID=478&AffID=883679"><img src="https://www1.ipage.com/affiliate/banners/478" style="border:0px" alt="affiliate_link"/></a></div><br>
 	  <div style="overflow:hidden; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
