--- a/pcso-lottery-games/amp/Swertres.html
+++ b/pcso-lottery-games/amp/Swertres.html
@@ -32,7 +32,7 @@
 <!-- Google Tag Manager -->
 <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-KGH4VKG&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
 
-<div class="Topnav"><a href="#" ><amp-img width="210" height="45" src="https://www.addtocart.ph/images/nav-logo.jpg"></amp-img></a></div>
+<div class="Topnav"><a href="#" ><amp-img width="210" height="45" src="https://www.addtocart.ph/images/nav-logo.webp"></amp-img></a></div>
 
 <div><ul class="social">
 <li><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.addtocart.ph/pcso-lottery-games/Swertres" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="facebook" width="55" height="55" viewBox="0 0 46 46" role="img" aria-labelledby="facebook-icon"><path fill="#3C599A" d="M18.896 20.12h1.758v-1.708c0-.753.02-1.915.566-2.635.576-.762 1.368-1.28 2.73-1.28 2.218 0 3.15.316 3.15.316l-.438 2.605s-.73-.212-1.417-.212c-.684 0-1.296.245-1.296.93v1.985h2.803l-.194 2.547h-2.61v8.84h-3.297v-8.84h-1.758V20.12z"/></svg></a></li>
@@ -64,6 +64,6 @@
 <p>Claiming your winnings is easy. If you win prizes amounting to &#8369;5,000 and below you can claim it at any authorized Lotto outlet or at the PCSO branch offices near you. If you win more than &#8369;5,000 to &#8369;20,000 you can claim it at any of the PCSO branch offices or at the PCSO head office and if you win more than &#8369;20,000, you should go directly to PCSO main office, located at 605 Conservatory Bldg., Shaw Blvrd. Corner Princeton St., Mandaluyong city.</p>
 <br><br></div>
 
-<footer><amp-img width="210" height="45" src="https://www.addtocart.ph/images/nav-logo.jpg"></amp-img>
+<footer><amp-img width="210" height="45" src="https://www.addtocart.ph/images/nav-logo.webp"></amp-img>
 <p>&#xA9; Add To Cart Philippines | 2019</p>
 </footer></body></html>
