--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -10,9 +10,9 @@
 <meta name="description" content="Learn how to play PCSO Swertres, how rambolito works. Everything you need to know about playing PCSO Swertres is here. Click here to learn more." /> 
 <meta name="keywords" content="Swertres, Suertres, Swertres lotto, Suertres lotto, pcso swertres, pcso suertres, rambolito, how to play, play lotto, pcso, lotto" /> 
 <meta name="news_keywords" content="Swertres, Suertres, Swertres lotto, Suertres lotto, pcso swertres, pcso suertres, rambolito, how to play, play lotto, pcso, lotto"/>
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/Swertres" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/Swertres"/> 
-	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/swertres" /> 
+<link rel="original-source" href="https://www.pnkw.ph/lottery/swertres" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/swertres"/> 
+	<meta property="twitter:url" content="https://www.pnkw.ph/lottery/swertres" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
 <meta property="twitter:creator" content="@LottoInfoPH" /> 
