--- a/pcso-lotto-and-games/4-Digit-Game.html
+++ b/pcso-lotto-and-games/4-Digit-Game.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play PCSO 4 Digit Game. Everything you need to know about playing PCSO 4 Digit Game is here. Click here to learn more." /> 
 <meta name="keywords" content="4 Digit lotto, how to play, play digit game, pcso digit game,  how to play digit game, 4 Digit Game, lottery, pcso, lotto" /> 
 <meta name="news_keywords" content="4 Digit lotto, how to play, play digit game, pcso digit game,  how to play digit game, 4 Digit Game, lottery, pcso, lotto" />
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/4-Digit-Game" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/4-Digit-Game" />
+<link rel="original-source" href="https://www.pnkw.ph/lottery/4-Digit-Game" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/4-Digit-Game" />
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
