--- a/pcso-lotto-and-games/EZ-2.html
+++ b/pcso-lotto-and-games/EZ-2.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play EZ 2 Lotto. Everything you need to know about playing PCSO EZ 2 Lotto is here. Click here to learn more." /> 
 <meta name="keywords" content="PCSO EZ2, PCSO EZ2 lotto, EZ2, EZ 2, how to play lotto, play lotto, pcso, lotto" /> 
 <meta name="news_keywords" content="PCSO EZ 2, PCSO EZ 2 lotto, EZ2, EZ 2, how to play lotto, play lotto, pcso, lotto" />
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/EZ-2" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/EZ-2" /> 
+<link rel="original-source" href="https://www.pnkw.ph/lottery/EZ-2" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/EZ-2" /> 
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/ez-2" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
