--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play Grand Lotto 6/55. Everything you need to know about playing Grand Lotto 6/55 is here. Click here to learn more." /> 
 <meta name="keywords" content="How to play grand lotto 6/55, Grandlotto 6/55, how to play lotto, play lotto, lotto 6/55, Grand lotto, lotto" /> 
 <meta name="news_keywords" content="How to play grand lotto 6/55, PCSO Lotto, Grand lotto 6/55, how to play lotto, lotto 6/55, play lotto, grandlotto, lotto" />
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55" /> 
+<link rel="original-source" href="https://www.pnkw.ph/lottery/Grand-lotto-6-55" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/Grand-lotto-6-55" /> 
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/grand-lotto-6-55" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
