--- a/pcso-lotto-and-games/Mega-Lotto-6-45.html
+++ b/pcso-lotto-and-games/Mega-Lotto-6-45.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play Mega Lotto 6/45. Everything you need to know about playing Mega Lotto 6/45 is here. Click here to learn more." /> 
 <meta name="keywords" content="pcso lotto, Megalotto 6/45, how to play lotto, play lotto, mega lotto, lottery, pcso, lotto" /> 
 <meta name="news_keywords" content="PCSO Lotto, Mega lotto 6/45, how to play lotto, play lotto, megalotto, lottery, pcso, lotto" />
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/Mega-Lotto-6-45" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/Mega-Lotto-6-45" /> 
+<link rel="original-source" href="https://www.pnkw.ph/lottery/Mega-Lotto-6-45" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/Mega-Lotto-6-45" /> 
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/mega-lotto-6-45" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
