--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play Super Lotto 6/49. Everything you need to know about playing Super Lotto 6/49 is here. Click here to learn more." /> 
 <meta name="keywords" content="superlotto 6/49, how to play lotto, play lotto, superlotto, lottery, pcso, lotto" /> 
 <meta name="news_keywords" content="PCSO Lotto, superlotto 6/49, how to play lotto, play lotto, super lotto, lottery, pcso, lotto" />
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/Super-lotto-6-49" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/Super-lotto-6-49" /> 
+<link rel="original-source" href="https://www.pnkw.ph/lottery/Super-lotto-6-49" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/Super-lotto-6-49" /> 
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
