--- a/pcso-lotto-and-games/lotto-6-42.html
+++ b/pcso-lotto-and-games/lotto-6-42.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play PCSO Lotto 6/42. Everything you need to know about playing PCSO Lotto 6/42 is here. Click here to learn more." /> 
 <meta name="keywords" content="PCSO Lotto, pcso lotto 6/42, how to play lotto, play lotto, lotto 6/42, lottery, pcso, lotto" /> 
 <meta name="news_keywords" content="PCSO Lotto, pcso lotto 6/42, how to play lotto, play lotto, lotto 6/42, lottery, pcso, lotto" />
-<link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42" />
-<link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42" /> 
+<link rel="original-source" href="https://www.pnkw.ph/lottery/lotto-6-42" />
+<link rel="canonical" href="https://www.pnkw.ph/lottery/lotto-6-42" /> 
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
