--- a/pcso-lotto-and-games/6-Digit-Game.html
+++ b/pcso-lotto-and-games/6-Digit-Game.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Learn how to play PCSO 6 Digit Game. Everything you need to know about playing PCSO 6 Digit Game is here. Click here to learn more." /> 
 <meta name="keywords" content="PCSO Lotto, PCSO digit game, digit game, 6 digit game, 6 digit lotto, how to play lotto, play lotto, play digit game, lottery, lotto, pcso" /> 
 <meta name="news_keywords" content="PCSO Lotto, PCSO digit game, digit game, 6 digit game, 6 digit lotto, how to play lotto, play lotto, lottery, lotto, pcso" />
-<link rel="original-source" href="https://www.pnkw.ph/lottery/6-Digit-Game" />
-<link rel="canonical" href="https://www.pnkw.ph/lottery/6-Digit-Game" /> 
+<link rel="original-source" href="https://www.lottoinfo.ph/pcso-lotto-and-games/6-Digit-Game" />
+<link rel="canonical" href="https://www.lottoinfo.ph/pcso-lotto-and-games/6-Digit-Game" /> 
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game" /> 
 <meta property="twitter:site" content="@LottoInfoPH" /> 
 <meta property="twitter:image" content="https://lottoinfo.ph/logo.png" /> 
