--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -25,7 +25,7 @@
 <section class="TableOfContents" style="margin-bottom:1rem"><h4>Table of contents</h4><div class="TitleDiv"></div>
 <ul class="List"><li><a href="#The-PCSO-4-Digit-Game" rel="ToC">The PCSO 4-Digit Game</a></li>
     <li><a href="#How-to-play-4-Digit-Game" rel="ToC">How to play 4-Digit Game?</a></li>
-    <li><a href="#How-does-4-Digit-Game-different-system-play-works" title="Roll 1 | Roll 4 | Perm or Rambol | 4 Digit Game" rel="ToC">How does 4-Digit Game different system play works?</a></li>
+    <li><a href="#How-does-4-Digit-Game-different-system-play-works" title="Roll 1 | Roll 4 | Perm or Rambol | 4 Digit Game" rel="ToC">Roll 1, Roll 4, Perm or Rambol 4-Digit Game different system play</a></li>
     	<ul>
     	<li><a href="#4-Digit-Game-Roll-1" rel="ToC">4-Digit Game Roll 1</a></li>
     	<li><a href="#4-Digit-Game-Roll-4" rel="ToC">4-Digit Game Roll 4</a></li>
