--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -76,7 +76,13 @@
 <a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game" title="How To Play PCSO 6 Digit Game" rel="bookmark"><li>How To Play 6 Digit Game</li></a>
 <a href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" title="How To Play PCSO 4 Digit Game" rel="bookmark"><li>How To Play 4 Digit Game</li></a>
 <a href="https://lottoinfo.ph/pcso-lotto-and-games/ez-2" title="How To Play PCSO EZ2 Lotto" rel="bookmark"><li>How To Play EZ2 Lotto</li></a>
-</ul></div></main>
+</ul></div>
+<nav class="related" style="margin-left:-50000px;margin-top:-600px;position:absolute;max-width:400px">
+<h3>Game Mechanics</h3><div class="TitleDiv"></div>
+<ul>
+<a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game-mechanics" title="PCSO 6 Digit Game Mechanics" rel="bookmark"><li>6 Digit Game Mechanics</li></a>
+</ul></nav>
+</main>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "WebSite", "name": "Lotto Info Philippines", "url": "https://lottoinfo.ph", "potentialAction": { "@type": "SearchAction", "target": "https://lottoinfo.ph/?s={search_term_string}", "query-input": "required name=search_term_string" } }</script>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "Organization", "address": { "@type": "PostalAddress", "addressCountry": "Philippines"}, "email": "inquire(at)lottoinfo.ph", "member": { "@type": "Organization" }, "name": "Lotto Info Philippines" }</script>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": { "@type": "EntryPoint", "url": "https://lottoinfo.ph/pcso-lotto-and-games/swertres", "urlTemplate": "https://lottoinfo.ph/pcso-lotto-and-games/swertres" } }</script>
