--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -81,25 +81,25 @@
 <h3>Game Mechanics</h3>
 <ul><li><a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game-mechanics" title="PCSO 6 Digit Game Mechanics" rel="bookmark">6 Digit Game Mechanics</a></li></ul>
 <h4>Latest PCSO lotto results</h4>
-<ul><li><a href="https://lottoinfo.ph/results-and-winnings.html#58Result">Ultra lotto 6/58</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#55Result">Grand lotto 6/55</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#49Result">Super lotto 6/49</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#45Result">Mega lotto 6/45</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#42Result">Lotto 6/42</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#6DResult">6 Digit lotto</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#4DResult">4 Digit lotto</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#SwertresResult">Swertres lotto</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings.html#EZ2Result">EZ 2 lotto</a></li></ul>
+<ul><li><a href="https://lottoinfo.ph/results-and-winnings.html#58Result">Ultra lotto 6/58 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#55Result">Grand lotto 6/55 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#49Result">Super lotto 6/49 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#45Result">Mega lotto 6/45 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#42Result">Lotto 6/42 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#6DResult">6 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#4DResult">4 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#SwertresResult">Swertres Lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#EZ2Result">EZ 2 lotto Result</a></li></ul>
 <h4>Previous draw results</h4>
-<ul><li><a href="https://lottoinfo.ph/results-and-winnings/Ultra-lotto-6-58-results">Ultra lotto 6/58</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/Grand-lotto-6-55-results">Grand lotto 6/55</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/Super-lotto-6-49-results">Super lotto 6/49</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/Mega-lotto-6-45-results">Mega lotto 6/45</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/PCSO-lotto-6-42-results">Lotto 6/42</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/6-Digit-Game-results">6 Digit lotto</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/4-Digit-Game-results">4 Digit lotto</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/Swertres-results">Swertres lotto</a></li>
-<li><a href="https://lottoinfo.ph/results-and-winnings/EZ-2-lotto-results">EZ 2 lotto</a></li></ul>
+<ul><li><a href="https://lottoinfo.ph/results-and-winnings/Ultra-lotto-6-58-results">Previous Ultra lotto 6/58 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Grand-lotto-6-55-results">Previous Grand lotto 6/55 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Super-lotto-6-49-results">Previous Super lotto 6/49 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Mega-lotto-6-45-results">Previous Mega lotto 6/45 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/PCSO-lotto-6-42-results">Previous Lotto 6/42 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/6-Digit-Game-results">Previous 6 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/4-Digit-Game-results">Previous 4 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Swertres-results">Previous Swertres Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/EZ-2-lotto-results">Previous EZ 2 lotto Result</a></li></ul>
 <h4>Site Map</h4>
 <ul><li><a href="https://lottoinfo.ph">Home</a></li>
 <li><a href="https://lottoinfo.ph/PCSO-Lotto-and-Games">PCSO Lotto & Games</a></li>
