--- a/pcso-lotto-and-games/6-digit-game.html
+++ b/pcso-lotto-and-games/6-digit-game.html
@@ -74,11 +74,38 @@
 <a href="https://lottoinfo.ph/pcso-lotto-and-games/Swertres" title="How to Play PCSO Swertres Lotto" rel="bookmark"><li>How to Play Swertres Lotto</li></a>
 <a href="https://lottoinfo.ph/pcso-lotto-and-games/ez-2" title="How To Play PCSO EZ2 Lotto" rel="bookmark"><li>How To Play EZ2 Lotto</li></a>
 </ul></div>
-<nav class="related" style="margin-left:-50000px;margin-top:-600px;position:absolute;max-width:400px">
+<div class="related" style="margin-left:-50000px;margin-top:-2000px;position:absolute;max-width:400px">
 <h3>Game Mechanics</h3><div class="TitleDiv"></div>
 <ul>
-<a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game-mechanics" title="PCSO 6 Digit Game Mechanics" rel="bookmark"><li>6 Digit Game Mechanics</li></a>
-</ul></nav>
+<li><a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game-mechanics" title="PCSO 6 Digit Game Mechanics" rel="bookmark">6 Digit Game Mechanics</a></li>
+</ul>
+<h4>Latest PCSO lotto results</h4>
+<ul>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#58Result">Ultra lotto 6/58 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#55Result">Grand lotto 6/55 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#49Result">Super lotto 6/49 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#45Result">Mega lotto 6/45 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#42Result">Lotto 6/42 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#6DResult">6 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#4DResult">4 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#SwertresResult">Swertres lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings.html#EZ2Result">EZ 2 lotto Result</a></li>
+</ul>
+<h4>Previous draw results</h4>
+<ul><li><a href="https://lottoinfo.ph/results-and-winnings/Ultra-lotto-6-58-results">Previous Ultra lotto 6/58 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Grand-lotto-6-55-results">Previous Grand lotto 6/55 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Super-lotto-6-49-results">Previous Super lotto 6/49 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Mega-lotto-6-45-results">Previous Mega lotto 6/45 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/PCSO-lotto-6-42-results">Previous Lotto 6/42 Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/6-Digit-Game-results">Previous 6 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/4-Digit-Game-results">Previous 4 Digit lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/Swertres-results">Previous Swertres lotto Result</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings/EZ-2-lotto-results">Previous EZ 2 lotto Result</a></li></ul>
+<h4>Site Map</h4>
+<ul><li><a href="https://lottoinfo.ph">Home</a></li>
+<li><a href="https://lottoinfo.ph/PCSO-Lotto-and-Games">PCSO Lotto & Games</a></li>
+<li><a href="https://lottoinfo.ph/results-and-winnings">Results & Winnings</a></li></ul>
+</div>
 </main>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "WebSite", "name": "Lotto Info Philippines", "url": "https://lottoinfo.ph", "potentialAction": { "@type": "SearchAction", "target": "https://lottoinfo.ph/?s={search_term_string}", "query-input": "required name=search_term_string" } }</script>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "Organization", "address": { "@type": "PostalAddress", "addressCountry": "Philippines"}, "email": "inquire(at)lottoinfo.ph", "member": { "@type": "Organization" }, "name": "Lotto Info Philippines" }</script>
