--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -23,7 +23,7 @@
 <section class="TableOfContents" style="margin-bottom:1rem"><h4>Table of contents</h4><div class="TitleDiv"></div>
 <ul class="List"><li><a href="#The-PCSO-Swertres" rel="ToC">The PCSO Swertres</a></li>
     <li><a href="#How-to-play-Swertres-Lotto" rel="ToC">How to play Swertres Lotto?</a></li>
-    <li><a href="#How-does-Rambolito-works" rel="ToC">How does Rambolito works?</a></li>
+    <li><a href="#How-does-Rambolito-works" rel="ToC">Swertres Rambolito | Rambolito 3 and Rambolito 6</a></li>
     <li><a href="#How-to-win-Swertres" rel="ToC">How to win Swertres?</a></li>
     <li><a href="#How-much-can-I-win" rel="ToC">How much can I win?</a></li>
     <li><a href="#Where-can-I-see-the-Swertres-Lotto-results" rel="ToC">Where can I see the Swertres Lotto results?</a></li>
