--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -14,6 +14,7 @@
 <style type="text/css">*{box-sizing:border-box;margin:0}body{font-family:Arial}.related a,td,p{margin:1rem 0;font-size:19px;color:#48525c;line-height:1.67;}.TitleDiv{height:3px;background:linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);width:60px;margin:8px 0 15px 0;border-radius:50px;}h1,h2,h3,h4{line-height:1.4;Font-family:Monaco;font-size:28px;padding:1rem 0 0 0;color:#20202a}p a{color:#005af0}a{text-decoration:none}.related a,th,.s-t{font-size:20px;color:#20202a}.related li{list-style-type:none;margin-left:-40px;padding:14px 16px;border-bottom:1px solid #ccc}.related li:hover,.TableOfContents a:hover{color:#005af0;}.TableOfContents a{color:#48525c}.TableOfContents li{padding:5px 0}.social li{margin:0 5px;list-style-type:none;display:inline;}.social svg{background:#fff;transition-duration: 0.3s;box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);border-radius:50%;}.social svg:hover{box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);}
 .ball{background:#F7DC6F;border-radius:50%;display:inline-block;font-weight:normal;line-height:1.8em;margin:0 4px;text-align:center;width:1.8em;}
 #spin:after { content:""; animation: spin 10s linear infinite;} @keyframes spin {0% {content:"9";} 10% {content:"0";} 20% {content:"1";} 30% {content:"2";} 40% {content:"3";} 50% {content:"4";} 60% {content: "5";} 70% {content: "6";} 80% {content: "7";} 90% {content: "8";} 100% {content: "9";}}
+.adsbygoogle{margin:auto;overflow:hidden;height:90px;width:100%;max-width:728px;margin:50px auto}@media (max-width:600px){.adsbygoogle{height:250px;width:100%;max-width:300px;margin:50px auto}}@media (min-width:40.06rem){.m-ads{display:none;}
 </style>
 </head><body>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "WPHeader", "headline": "How To Play PCSO 4 Digit Game", "alternativeHeadline": "How to play PCSO 4 digit lotto" }</script>
@@ -42,6 +43,19 @@
 <h2 id="The-PCSO-4-Digit-Game"><strong>The PCSO 4-Digit Game</strong></h2><div class="TitleDiv"></div>
 <p>On August 1997, the Philippine Charity Sweepstakes Office (PCSO) launched the 4-Digit Game as the first digit game in the Philippines.</p>
 <p>The 4-Digit Game is played three times weekly, every monday, wednesday and friday.</p>
+<div class="adsbygoogle">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- LottoInfoAds -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5679542487"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <h1 id="How-to-play-4-Digit-Game"><strong>How to play 4-Digit Game?</strong></h1><div class="TitleDiv"></div>
 <p>Playing 4-Digit Game is simple. Go to any authorized PCSO lotto outlet and get a 4-Digit Game playslip and mark your chosen four (4) numbers (each digit from numbers 0 to 9) you can choose four same numbers (Example: <span class="ball">5</span>-<span class="ball">5</span>-<span class="ball">5</span>-<span class="ball">5</span> ). After that submit your playslip to the outlet operator and wait for your ticket. You will pay &#8369;12 for every standard play.</p>
 <p>You can also play the different <b>System plays</b>.</p>
@@ -53,6 +67,19 @@
 <br>Similar to Roll 1 except that in this system, you will only choose the first three digits and your last digit is bonus. That means you have ten 4 digit combinations</p>
 <p>Example: If your chosen numbers for the first, second and third digit are <span class="ball">5</span>-<span class="ball">5</span>-<span class="ball">6</span>-<span class="ball">_</span></p>
 <p>By playing <b>Roll 4</b> your combinations will be: <span class="ball">5</span>-<span class="ball">5</span>-<span class="ball">6</span>-<span class="ball"><span id="spin"></span></span></p>
+<div class="adsbygoogle">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- LottoInfoAds -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5679542487"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <p><strong id="4-Digit-Game-Perm-or-Rambol" class="s-t">4-Digit Game | Perm or Rambol</strong> <br>The system will automatically combine all the different possible combinations of your chosen 4 numbers. Giving you more number combinations.</p>
 <p>If your chosen number combination is composed of four (4) different numbers, example: <span class="ball">0</span>-<span class="ball">1</span>-<span class="ball">2</span>-<span class="ball">3</span> the system can generate a <b>twenty four</b> (24) combinations.</p>
 <p>If your chosen number combination is composed of 2 different number and 1 pair of the same number, example: <span class="ball">0</span>-<span class="ball">1</span>-<span class="ball">2</span>-<span class="ball">2</span> the system can generate a <b>twelve</b> (12) combinations.</p>
@@ -74,6 +101,19 @@
 <p>To win the 1st prize, you need to match correctly all four of the winning numbers in <b>exact</b> order. You can also win prizes by getting the last three or last two of the winning numbers, in <b>exact</b> order.</p>
 <h3 id="How-much-can-I-win"><strong>How much can I win?</strong></h3><div class="TitleDiv"></div>
 <p>If you got the perfect four of the winning number drawn, in <b>exact</b> order, you win the 1st prize, Minimum Guaranteed Amount (MGA) of &#8369;10,000. If you got the last three digits you can win (MGA) &#8369;800. (MGA) &#8369;100 if you got the last two digits. Take a look at the prize breakdown table of each draw to see what you’ve won.</p>
+<div class="adsbygoogle">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- LottoInfoAds -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5679542487"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <h3 id="What-if-there-are-more-than-one-first-prize-winner"><strong>What if there are more than one first prize winner?</strong></h3><div class="TitleDiv"></div>
 <p>The 4-Digit Game is a pari-mutuel game. Meaning if there are more than one first prize winner, the prize money will be divided equally among the winners.</p>
 <p>The 1st prize pool is not snowballed/carried over to the next draw. Whatever is the pool generated for the 1st Prize is equally divided among the number of 1st prize winners for that particular draw.</p>
@@ -84,6 +124,19 @@
 <p>Claiming your 4-Digit Game winnings is easy. If you win prizes amounting to &#8369;10,000 and below you can claim it at any authorized Lotto outlet or at the PCSO branch offices near you. If you win more than &#8369;10,000 you can claim it at any of the PCSO branch offices or at the PCSO head office, located at 605 Conservatory Bldg., Shaw Blvrd. Corner Princeton St., Mandaluyong city.</p>
 <h3 id="Source">Source</h3><div class="TitleDiv"></div>
 <p>All of the informations in this "How to play PCSO 4-Digit Game" article are from the official website of Philippine Charity Sweepstakes Office (PCSO).</p>
+<div class="adsbygoogle">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- LottoInfoAds -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5679542487"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
 <ul>
@@ -132,6 +185,17 @@
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "WebSite", "name": "Lotto Info Philippines", "url": "https://lottoinfo.ph", "potentialAction": { "@type": "SearchAction", "target": "https://lottoinfo.ph/?s={search_term_string}", "query-input": "required name=search_term_string" } }</script>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "Organization", "address": { "@type": "PostalAddress", "addressCountry": "Philippines"}, "email": "inquire(at)lottoinfo.ph", "member": { "@type": "Organization" }, "name": "Lotto Info Philippines" }</script>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": { "@type": "EntryPoint", "url": "https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game", "urlTemplate": "https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" } }</script>
+<div class="m-ads" style="text-align:center;z-index:5;border-top:1px solid #ccc;padding:2px;position:fixed;width:100%;height:56px;bottom:0;background:#fff;overflow:hidden">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- LottoInfoAdsM -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:50px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="2294831246"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer style="font-size:1.6rem;text-align:center;height:200px;font-family:cursive;padding:100px 0">
 <b><a href="https://lottoinfo.ph" style="color:#20202a">Lotto Info Philippines</a></b>
 </footer>
