--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -43,7 +43,7 @@
 <h2 id="The-PCSO-4-Digit-Game"><strong>The PCSO 4-Digit Game</strong></h2><div class="TitleDiv"></div>
 <p>On August 1997, the Philippine Charity Sweepstakes Office (PCSO) launched the 4-Digit Game as the first digit game in the Philippines.</p>
 <p>The 4-Digit Game is played three times weekly, every monday, wednesday and friday.</p>
-<div class="adsbygoogle">
+<div style="margin:50px 0">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
