--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -14,7 +14,7 @@
 <style type="text/css">*{box-sizing:border-box;margin:0}body{font-family:Arial}.related a,td,p{margin:1rem 0;font-size:19px;color:#48525c;line-height:1.67;}.TitleDiv{height:3px;background:linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);width:60px;margin:8px 0 15px 0;border-radius:50px;}h1,h2,h3,h4{line-height:1.4;Font-family:Monaco;font-size:28px;padding:1rem 0 0 0;color:#20202a}p a{color:#005af0}a{text-decoration:none}.related a,th,.s-t{font-size:20px;color:#20202a}.related li{list-style-type:none;margin-left:-40px;padding:14px 16px;border-bottom:1px solid #ccc}.related li:hover,.TableOfContents a:hover{color:#005af0;}.TableOfContents a{color:#48525c}.TableOfContents li{padding:5px 0}.social li{margin:0 5px;list-style-type:none;display:inline;}.social svg{background:#fff;transition-duration: 0.3s;box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);border-radius:50%;}.social svg:hover{box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);}
 .ball{background:#F7DC6F;border-radius:50%;display:inline-block;font-weight:normal;line-height:1.8em;margin:0 4px;text-align:center;width:1.8em;}
 #spin:after { content:""; animation: spin 10s linear infinite;} @keyframes spin {0% {content:"9";} 10% {content:"0";} 20% {content:"1";} 30% {content:"2";} 40% {content:"3";} 50% {content:"4";} 60% {content: "5";} 70% {content: "6";} 80% {content: "7";} 90% {content: "8";} 100% {content: "9";}}
-.adsbygoogle{margin:auto;overflow:hidden;height:90px;width:100%;max-width:728px;margin:50px auto}@media (max-width:600px){.adsbygoogle{height:250px;width:100%;max-width:300px;margin:50px auto}}@media (min-width:40.06rem){.m-ads{display:none;}
+.ads-by-google{margin:auto;overflow:hidden;height:90px;width:100%;max-width:728px;margin:50px auto}@media (max-width:600px){.ads-by-google{height:250px;width:100%;max-width:300px;margin:50px auto}}@media (min-width:40.06rem){.m-ads{display:none;}
 </style>
 </head><body>
 <script type=application/ld+json>{ "@context": "http://schema.org", "@type": "WPHeader", "headline": "How To Play PCSO 4 Digit Game", "alternativeHeadline": "How to play PCSO 4 digit lotto" }</script>
@@ -43,7 +43,7 @@
 <h2 id="The-PCSO-4-Digit-Game"><strong>The PCSO 4-Digit Game</strong></h2><div class="TitleDiv"></div>
 <p>On August 1997, the Philippine Charity Sweepstakes Office (PCSO) launched the 4-Digit Game as the first digit game in the Philippines.</p>
 <p>The 4-Digit Game is played three times weekly, every monday, wednesday and friday.</p>
-<div style="margin:50px 0">
+<div class="ads-by-google">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
@@ -67,7 +67,7 @@
 <br>Similar to Roll 1 except that in this system, you will only choose the first three digits and your last digit is bonus. That means you have ten 4 digit combinations</p>
 <p>Example: If your chosen numbers for the first, second and third digit are <span class="ball">5</span>-<span class="ball">5</span>-<span class="ball">6</span>-<span class="ball">_</span></p>
 <p>By playing <b>Roll 4</b> your combinations will be: <span class="ball">5</span>-<span class="ball">5</span>-<span class="ball">6</span>-<span class="ball"><span id="spin"></span></span></p>
-<div class="adsbygoogle">
+<div class="ads-by-google">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
@@ -101,7 +101,7 @@
 <p>To win the 1st prize, you need to match correctly all four of the winning numbers in <b>exact</b> order. You can also win prizes by getting the last three or last two of the winning numbers, in <b>exact</b> order.</p>
 <h3 id="How-much-can-I-win"><strong>How much can I win?</strong></h3><div class="TitleDiv"></div>
 <p>If you got the perfect four of the winning number drawn, in <b>exact</b> order, you win the 1st prize, Minimum Guaranteed Amount (MGA) of &#8369;10,000. If you got the last three digits you can win (MGA) &#8369;800. (MGA) &#8369;100 if you got the last two digits. Take a look at the prize breakdown table of each draw to see what you’ve won.</p>
-<div class="adsbygoogle">
+<div class="ads-by-google">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
@@ -124,7 +124,7 @@
 <p>Claiming your 4-Digit Game winnings is easy. If you win prizes amounting to &#8369;10,000 and below you can claim it at any authorized Lotto outlet or at the PCSO branch offices near you. If you win more than &#8369;10,000 you can claim it at any of the PCSO branch offices or at the PCSO head office, located at 605 Conservatory Bldg., Shaw Blvrd. Corner Princeton St., Mandaluyong city.</p>
 <h3 id="Source">Source</h3><div class="TitleDiv"></div>
 <p>All of the informations in this "How to play PCSO 4-Digit Game" article are from the official website of Philippine Charity Sweepstakes Office (PCSO).</p>
-<div class="adsbygoogle">
+<div class="ads-by-google">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
