--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -25,7 +25,7 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block;height:90px"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="5679542487"
      data-ad-format="auto"
