--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -142,6 +142,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<h3>Comments</h3><div class="TitleDiv"></div>
 <div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="10" data-width="100%"></div>
 </div>
 <div class="related">
