--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -130,7 +130,7 @@
 <p>Claiming your 4-Digit Game winnings is easy. If you win prizes amounting to &#8369;10,000 and below you can claim it at any authorized Lotto outlet or at the PCSO branch offices near you. If you win more than &#8369;10,000 you can claim it at any of the PCSO branch offices or at the PCSO head office, located at 605 Conservatory Bldg., Shaw Blvrd. Corner Princeton St., Mandaluyong city.</p>
 <h3 id="Source">Source</h3><div class="TitleDiv"></div>
 <p>All of the informations in this "How to play PCSO 4-Digit Game" article are from the official website of Philippine Charity Sweepstakes Office (PCSO).</p>
-<div class="ads-by-google" style="margin-bottom:50px">
+<div class="ads-by-google">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- LottoInfoAds -->
 <ins class="adsbygoogle"
@@ -142,8 +142,8 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<h3>Comments</h3><div class="TitleDiv"></div>
-<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="10" data-width="" style="width:100%"></div>
+<h3 style="margin-top:50px">Comments</h3><div class="TitleDiv"></div>
+<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="10" data-width="" style="max-width:728;width:100%"></div>
 </div>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
