--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -143,7 +143,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <h3 style="margin-top:50px">Comments</h3><div class="TitleDiv"></div>
-<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="10" data-width="" style="max-width:728;width:100%"></div>
+<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="10" data-width="100%" data-order-by="time" style="max-width:728;width:100%"></div>
 </div>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
