--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -143,7 +143,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <h3 style="margin-top:50px">Comments</h3><div class="TitleDiv"></div>
-<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="100%" data-order-by="time" style="box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12)"></div>
+<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="100%" data-order-by="time" style="border-bottom:1px solid #ccc"></div>
 </div>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
