--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -142,9 +142,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<h3 style="margin-top:50px">Comments</h3><div class="TitleDiv"></div>
-<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="100%" data-order-by="time" style="border-bottom:1px solid #ccc"></div>
 </div>
+<h3>Comments</h3><div class="TitleDiv"></div>
+<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="100%" data-order-by="time"></div>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
 <ul>
