--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -27,7 +27,7 @@
 <div class="desktop"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <!-- 728w --> <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="3736739579"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 </div>
 <header style="-webkit-text-stroke:.1px #20202a;font-size:3rem;text-align:center;line-height:3.5rem;color:#fff;font-family:serif;margin-top:50px">How to play PCSO 4-Digit Game?</header></div>
-<main style="max-width:750px;margin:0 auto;padding:0 16px;width:100%">
+<main style="max-width:750px;margin:0 auto;padding:0 16px;">
 <!-- FB / Twitter Share --> <div style="text-align:center;margin-top:-28px"><ul class="social" style="margin-left:-43px"><li><a href="http://www.facebook.com/sharer.php?u=https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="facebook" width="50" height="50" viewBox="0 0 46 46" role="img" aria-labelledby="facebook-icon"><path fill="#3C599A" d="M18.896 20.12h1.758v-1.708c0-.753.02-1.915.566-2.635.576-.762 1.368-1.28 2.73-1.28 2.218 0 3.15.316 3.15.316l-.438 2.605s-.73-.212-1.417-.212c-.684 0-1.296.245-1.296.93v1.985h2.803l-.194 2.547h-2.61v8.84h-3.297v-8.84h-1.758V20.12z"/></svg></a></li><li><a href="https://twitter.com/share?url=lottoinfo.ph/pcso-lotto-and-games/4-digit-game&amp;text=How%20To%20Play%20PCSO%204%20Digit%20Game&amp;hashtags=4DigitGame" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="twitter" viewBox="0 0 46 46" role="img" aria-labelledby="twitter-icon"><path fill="#5EA9DE" d="M31.52 17.716c-.627.278-1.302.466-2.008.55.722-.432 1.275-1.116 1.536-1.933-.676.4-1.422.69-2.22.847-.637-.68-1.546-1.103-2.552-1.103-1.93 0-3.494 1.565-3.494 3.495 0 .273.03.54.09.796-2.904-.146-5.48-1.536-7.205-3.653-.3.52-.473 1.12-.473 1.76 0 1.212.617 2.28 1.555 2.908-.576-.017-1.115-.176-1.587-.436v.043c0 1.694 1.205 3.107 2.805 3.427-.295.082-.603.123-.923.123-.225 0-.444-.02-.657-.062.445 1.388 1.736 2.4 3.266 2.425-1.196.94-2.704 1.498-4.34 1.498-.283 0-.562-.013-.835-.046 1.55.99 3.385 1.568 5.36 1.568 6.43 0 9.944-5.323 9.944-9.94 0-.153-.003-.306-.01-.454.684-.492 1.278-1.108 1.745-1.81"/></svg></a></li></ul></div>
 <section class="TableOfContents" style="margin-bottom:1rem"><h4>Table of contents</h4><div class="TitleDiv"></div>
 <ul class="List"><li><a href="#The-PCSO-4-Digit-Game" rel="ToC">The PCSO 4-Digit Game</a></li>
@@ -144,7 +144,7 @@
 </script>
 </div>
 <h3>Comments</h3><div class="TitleDiv"></div>
-<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="100%" data-order-by="time"></div>
+<div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="" data-order-by="time"></div><br>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
 <ul>
