--- a/pcso-lotto-and-games/4-digit-game.html
+++ b/pcso-lotto-and-games/4-digit-game.html
@@ -144,8 +144,7 @@
 </script>
 </div>
 <h3>Comments</h3><div class="TitleDiv"></div>
-<p>Please include the word "4 Digit Game" in your comment, so we will get notified when you post a comment. Thank you.
-<br><i>Paki sali po ang word na "4 Digit Game" sa inyong comment para malaman po namin agad na nagcomment kayo. Salamat po.</i></p>
+<p>Please include the word "4 Digit Game" in your comment, so we will get notified when you post a comment. Thank you.</p>
 <div class="fb-comments" data-href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" data-numposts="20" data-width="100%" data-order-by="time"></div>
 <div class="related">
 <h4>Related Post</h4><div class="TitleDiv"></div>
